added the learn sets text file